Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118074

qmllint does not complain about invalid import URL

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8
    • 6.6.0
    • QML: Tooling
    • None
    • b54f42c41 (dev)

      When I try to import an invalid import URL, qmllint does not complain.

      For example:

      import "¯\(ツ)/¯:/invalid/url" 

      leads (only!) to the warning

      Info: /Users/sami/tmp/untitled27/Main.qml:2:1: Unused import [unused-imports]
      import "¯\(ツ)/¯:/invalid/url"
      ^^^^^^ 

      My guess would be that QQmlJSImportVisitor::visit(QQmlJS::AST::UiImport *import) does not do check the URL for validity

        For Gerrit Dashboard: QTBUG-118074
        # Subject Branch Project Status CR V

            dima.a Dmitrii Akshintsev
            sami.shalayel Sami Shalayel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes