tests/auto/qml/qmllint/data/importNonexistentFile.qml
@@ -1,0 +1,3 @@
+import "¯\(ツ)/¯:/invalid/url"
+
+QtObject {}
