tests/auto/qml/qmllint/data/importNullDevice.qml
@@ -1,0 +1,3 @@
+import "/dev/null"
+
+QtObject {}
